[package]
name = "stagparty_chat_server"
version = "0.1.0"
authors = ["Rehatbir Singh <rehatbir.singh@gmail.com>"]
edition = "2021"
description = "StagParty's voice and text chat server for events"
readme = "README.md"
repository = "https://github.com/StagParty/chat-server"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "^0.13"
uuid = { version = "1", features = ["v4", "serde"] }
