[package]
name = "stagparty_chat_server"
version = "0.1.0"
authors = ["Rehatbir Singh <rehatbir.singh@gmail.com>"]
edition = "2021"
description = "StagParty's voice and text chat server for events"
readme = "README.md"
repository = "https://github.com/StagParty/chat-server"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "^0.3", features = ["websocket"] }
tonic = "^0.7"
prost = "^0.10"
tokio = { version = "^1.18", features = ["macros", "rt-multi-thread"] }
tokio-stream = "^0.1"
futures-util = "^0.3"
uuid = { version = "^1", features = ["v4", "serde"] }
sha256 = "^1.0"

[build-dependencies]
tonic-build = "^0.7"
